--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.1.3",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
