--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.3.1",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "next": "15.3.5",
@@ -21,7 +26,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.1.3",
+    "react-hot-toast": "^2.5.2",
     "resend": "^4.6.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -36,6 +43,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
