--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.3.1",
+    "ai": "^4.3.19",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "formidable": "^3.5.4",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.2",
-    "multer": "^2.0.1",
+    "multer": "^2.0.2",
     "next": "15.3.5",
     "next-connect": "^1.0.0",
-    "openai": "^5.8.3",
+    "openai": "^5.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.1.3",
@@ -35,6 +39,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^3.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.19.6",
